# Bacsy

./: CMakeLists.txt  CMakePackageDEB.cmake  CMakePackageRPM.cmake  README.rst  compileTest.sh  example-toolchain-mingw32.cmake
Bacsy/: CMakeLists.txt
Bacsy/Bacsyd/: Main.cpp
Bacsy/CLI/: BacsyClientMain.cpp
Bacsy/Client/: BackupEngine.cpp  BackupEngine.h  BacsyClientMain.cpp  CascadingSourceConfiguration.cpp  CascadingSourceConfiguration.h  IPlainTextPreviousRunRecord.cpp  IPlainTextPreviousRunRecord.h  ISourceConfiguration.cpp  ISourceConfiguration.h  OPlainTextPreviousRunRecord.cpp  OPlainTextPreviousRunRecord.h  PlainTextPreviousRunRecord.cpp  PlainTextPreviousRunRecord.h  PlainTextPreviousRunRecordFactory.cpp  PlainTextPreviousRunRecordFactory.h  PreviousRunRecord.cpp  PreviousRunRecord.h  PreviousRunRecordExclusionSubRule.cpp  PreviousRunRecordExclusionSubRule.h  PreviousRunRecordFactory.h  Source.cpp  Source.h  StoreMessage.cpp  StoreMessage.h  TimeSchedule.cpp  TimeSchedule.h  TimerStringParser.cpp  TimerStringParser.h
Bacsy/Common/: AMessage.cpp  AMessage.h  ArgParsingUtils.cpp  ArgParsingUtils.h  CascadingFileConfiguration.cpp  CascadingFileConfiguration.h  ConcurrentMap.cpp  ConcurrentMap.h  ConfigurationFile.cpp  ConfigurationFile.h  DatagramHelper.cpp  DatagramHelper.h  DummyFile.cpp  DummyFile.h  Environment.cpp  Environment.h  FileUtils.cpp  FileUtils.h  Functional.h  IFile.cpp  IFile.h  IPlainTextPreviousRunRecord.cpp  IPlainTextPreviousRunRecord.h  Info.h.in  JsonHelper.cpp  JsonHelper.h  MaxVersions.h  MinVersions.h  OPlainTextPreviousRunRecord.cpp  OPlainTextPreviousRunRecord.h  PlainTextPreviousRunRecord.cpp  PlainTextPreviousRunRecord.h  PocoFile.cpp  PocoFile.h  PreviousRunRecord.cpp  PreviousRunRecord.h  RunType.cpp  RunType.h  StringUtils.cpp  StringUtils.h  (+4 more)
Bacsy/Messages/: AMessage.cpp  AMessage.h  CanStore.cpp  CanStore.h  CanStoreMessage.cpp  CanStoreMessage.h  ReadyToStoreMessage.cpp  ReadyToStoreMessage.h  StoreMessage.cpp  StoreMessage.h  StoreResponseMessage.cpp  StoreResponseMessage.h
Bacsy/Rules/: ExclusionRule.cpp  ExclusionRule.h  ExclusionStringParser.cpp  ExclusionStringParser.h  ExclusionSubRule.cpp  ExclusionSubRule.h  FileGlobExclusionSubRule.cpp  FileGlobExclusionSubRule.h  ModifiedDateExclusionSubRule.cpp  ModifiedDateExclusionSubRule.h  PathExclusionSubRule.cpp  PathExclusionSubRule.h  PathGlobExclusionSubRule.cpp  PathGlobExclusionSubRule.h  SizeExclusionSubRule.cpp  SizeExclusionSubRule.h  StringExclusionRuleBuilder.cpp  StringExclusionRuleBuilder.h
Bacsy/Server/: BacsyConnection.cpp  BacsyConnection.h  BacsyServer.cpp  BacsyServer.h  BacsyServerMain.cpp  CascadingStoreConfiguration.cpp  CascadingStoreConfiguration.h  ConnectionFactory.h  IStoreConfiguration.h  JsonStoreIndex.cpp  JsonStoreIndex.h  MulticastResponder.cpp  MulticastResponder.h  Store.cpp  Store.h  StoreManager.cpp  StoreManager.h  StoreTimeParser.cpp  StoreTimeParser.h
Bacsy/Streams/: LoadSignatureStream.cpp  LoadSignatureStream.h  NullStream.cpp  NullStream.h  PerformDeltaStream.cpp  PerformDeltaStream.h  RsyncStream.cpp  RsyncStream.h  SimpleBufferStream.cpp  SimpleBufferStream.h  StreamUtils.cpp  StreamUtils.h  ToSignatureStream.cpp  ToSignatureStream.h
Test/: CMakeLists.txt  ConcurrentMapTest.cpp  ConcurrentMapTests.cpp  ConfigurationTests.cpp  ExclusionStringParserTests.cpp  Main.cpp  PlainTextPreviousRunRecordTests.cpp  RsyncStreamTests.cpp  RunTypeTest.cpp  RunTypeTests.cpp  StoreIndexTest.cpp  StoreIndexTests.cpp  StoreTimeParserTests.cpp  StringExclusionRuleBuilderTests.cpp  StringUtilsTests.cpp  TimerStringParserTests.cpp
lib/json/: CMakeLists.txt
src/: CMakeLists.txt
src/Bacsyd/: Main.cpp
src/Client/: BackupEngine.cpp  BackupEngine.h  BacsyClientMain.cpp  CascadingSourceConfiguration.cpp  CascadingSourceConfiguration.h  Source.cpp  Source.h  TimeSchedule.cpp  TimerStringParser.cpp  TimerStringParser.h
src/Common/: ArgParsingUtils.cpp  ArgParsingUtils.h  CascadingFileConfiguration.cpp  CascadingFileConfiguration.h  ConcurrentMap.cpp  ConfigurationFile.cpp  ConfigurationFile.h  DatagramHelper.cpp  DatagramHelper.h  Environment.cpp  JsonHelper.cpp  StringUtils.cpp
src/Rules/: ExclusionRule.cpp  ExclusionRule.h  ExclusionStringParser.cpp  ExclusionSubRule.cpp  FileGlobExclusionSubRule.cpp  FileGlobExclusionSubRule.h  PathExclusionSubRule.cpp  PathExclusionSubRule.h  PathGlobExclusionSubRule.cpp  PathGlobExclusionSubRule.h  SizeExclusionSubRule.cpp  SizeExclusionSubRule.h  StringExclusionRuleBuilder.cpp  StringExclusionRuleBuilder.h
src/Server/: BacsyConnection.cpp  BacsyConnection.h  BacsyServer.cpp  BacsyServer.h  BacsyServerMain.cpp  CascadingStoreConfiguration.cpp  CascadingStoreConfiguration.h  ConnectionFactory.h  JsonStoreIndex.cpp  MulticastResponder.cpp  Store.cpp  Store.h  StoreManager.cpp  StoreManager.h
src/Streams/: LoadSignatureStream.cpp  LoadSignatureStream.h  NullStream.cpp  NullStream.h  PerformDeltaStream.cpp  PerformDeltaStream.h  RsyncStream.cpp  RsyncStream.h  SimpleBufferStream.cpp  SimpleBufferStream.h  StreamUtils.cpp  StreamUtils.h  ToSignatureStream.cpp  ToSignatureStream.h
src/bacsyd/: Main.cpp
src/client/: BackupEngine.cpp  BackupEngine.h  BacsyClientMain.cpp  CascadingSourceConfiguration.cpp  CascadingSourceConfiguration.h  Source.cpp  Source.h  TimeSchedule.cpp  TimerStringParser.cpp  TimerStringParser.h
src/common/: ArgParsingUtils.cpp  ArgParsingUtils.h  CascadingFileConfiguration.cpp  CascadingFileConfiguration.h  ConcurrentMap.cpp  ConfigurationFile.cpp  ConfigurationFile.h  DatagramHelper.cpp  DatagramHelper.h  Environment.cpp  JsonHelper.cpp  StringUtils.cpp
src/main/: ArgParsingUtils.cpp  ArgParsingUtils.h  BackupEngine.cpp  BackupEngine.h  BacsyClientMain.cpp  BacsyConnection.cpp  BacsyConnection.h  BacsyServer.cpp  BacsyServer.h  BacsyServerMain.cpp  Functional.h  (+138 more)
test/: CMakeLists.txt  ConcurrentMapTest.cpp  ConfigurationTests.cpp  ExclusionStringParserTests.cpp  RsyncStreamTests.cpp  StoreIndexTest.cpp  StringExclusionRuleBuilderTests.cpp  StringUtilsTests.cpp  TimerStringParserTests.cpp
(+82 files in other folders)
